--- a/InsuranceManagement_RedBadge/InsuranceManagement_RedBadge.csproj
+++ b/InsuranceManagement_RedBadge/InsuranceManagement_RedBadge.csproj
@@ -237,6 +237,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Client\Index.cshtml" />
     <Content Include="Views\Client\Create.cshtml" />
+    <Content Include="Views\Client\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
