--- a/InsuranceManagement.Models/InsuranceManagement.Models.csproj
+++ b/InsuranceManagement.Models/InsuranceManagement.Models.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Client\ClientCreate.cs" />
     <Compile Include="Client\ClientDetail.cs" />
+    <Compile Include="Client\ClientEdit.cs" />
     <Compile Include="Client\ClientList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
