--- a/InsuranceManagement_RedBadge/InsuranceManagement_RedBadge.csproj
+++ b/InsuranceManagement_RedBadge/InsuranceManagement_RedBadge.csproj
@@ -238,6 +238,7 @@
     <Content Include="Views\Client\Index.cshtml" />
     <Content Include="Views\Client\Create.cshtml" />
     <Content Include="Views\Client\Details.cshtml" />
+    <Content Include="Views\Client\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
