--- a/InsuranceManagement_RedBadge/InsuranceManagement_RedBadge.csproj
+++ b/InsuranceManagement_RedBadge/InsuranceManagement_RedBadge.csproj
@@ -243,7 +243,10 @@
     <Content Include="Views\Client\Delete.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTimeOffSet.cshtml" />
     <Content Include="Views\Auto\Index.cshtml" />
+    <Content Include="Views\Auto\Details.cshtml" />
     <Content Include="Views\Auto\Create.cshtml" />
+    <Content Include="Views\Auto\Edit.cshtml" />
+    <Content Include="Views\Auto\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
