--- a/InsuranceManagement.Services/InsuranceManagement.Services.csproj
+++ b/InsuranceManagement.Services/InsuranceManagement.Services.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="AutoService.cs" />
     <Compile Include="ClientService.cs" />
+    <Compile Include="PersonalAutoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
