--- a/InsuranceManagement.Models/InsuranceManagement.Models.csproj
+++ b/InsuranceManagement.Models/InsuranceManagement.Models.csproj
@@ -58,10 +58,18 @@
     <Compile Include="Auto\AutoDetail.cs" />
     <Compile Include="Auto\AutoEdit.cs" />
     <Compile Include="Auto\AutoListItem.cs" />
+    <Compile Include="Business\BusinessCreate.cs" />
+    <Compile Include="Business\BusinessDetail.cs" />
+    <Compile Include="Business\BusinessEdit.cs" />
+    <Compile Include="Business\BusinessListItem.cs" />
     <Compile Include="Client\ClientCreate.cs" />
     <Compile Include="Client\ClientDetail.cs" />
     <Compile Include="Client\ClientEdit.cs" />
     <Compile Include="Client\ClientList.cs" />
+    <Compile Include="CommercialAuto\CommercialAutoCreate.cs" />
+    <Compile Include="CommercialAuto\CommercialAutoDetail.cs" />
+    <Compile Include="CommercialAuto\CommercialAutoEdit.cs" />
+    <Compile Include="CommercialAuto\CommercialAutoList.cs" />
     <Compile Include="PersonalAuto\PersonalAutoCreate.cs" />
     <Compile Include="PersonalAuto\PersonalAutoDetail.cs" />
     <Compile Include="PersonalAuto\PersonalAutoEdit.cs" />
